# discord-cluster-manager

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Aptfile  CITATION.cff  NCU_README.md  Procfile  README.md  bot.py  ci-requirements.txt  create_payload.py  data.json  discord-bot.py  docker-compose.test.yml  docker-compose.yml  encode_payload.py  example_config.json  matmul_kernel.cu  modal_runner.py  my_payload.txt  ncu_llm_prompt.txt  ncu_parsed_metrics.json  pyproject.toml  requirements.txt  simple_ncu_test.cu  simple_test.cu  simple_test_payload.json  test_kernel.cu  test_ncu_standalone.sh  train.py
.github/: pull_request_template.md
docker/: amd-docker.Dockerfile
docs/: diagram.md  docusaurus.config.ts  package-lock.json  package.json
examples/: eval.cu  eval.py  template.cu  utils.h  utils.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_c97fef35cf96bf90_backend_py.html  z_c97fef35cf96bf90_background_submission_manager_py.html  z_c97fef35cf96bf90_consts_py.html  z_c97fef35cf96bf90_db_types_py.html  z_c97fef35cf96bf90_leaderboard_db_py.html  z_c97fef35cf96bf90_ncu_parser_py.html  z_c97fef35cf96bf90_report_py.html  z_c97fef35cf96bf90_submission_py.html  z_c97fef35cf96bf90_task_py.html  z_c97fef35cf96bf90_utils_py.html
k8s/: README.md
ncu_shit/: cursor_how_to_start_the_server_for_kern.md
scripts/: ci_test_cuda.py  ci_test_python.py  flush_db.py  github_test_payload.json  local-test.py  modal-test.py  modal_ci_test.py  nuke_commands.js  rocshmem_test_payload.json  run_local_runner.py  submit_github.py  test_distributed.py  (+1 more)
(+194 files in other folders)
